assets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app-name nodejs-server
  namespace: test-a
  labels:
    app: *app-name
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: *app-name
  template:
    metadata:
      labels:
        app: *app-name
    spec:
      serviceAccountName: sa-nodejs-server
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
      containers:
      - name: *app-name
        imagePullPolicy: Never
        image: nodejs-server-v1:latest
        resources:
           requests:
             cpu: 100m
             memory: 50Mi
           limits:
             cpu: 200m
             memory: 150Mi
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          runAsNonRoot: true
          runAsUser: 1100
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 30
        livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - "ps -A | grep server.js | grep -v grep"
            initialDelaySeconds: 3
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","sleep 2"]
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: topology.kubernetes.io/zone
                labelSelector:
                  matchLabels:
                    app: *app-name
              weight: 100
