assets/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app-name svc-nodejs-server
  namespace: test-a
  labels:
    app: *app-name
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: nodejs-server
