assets/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-nodejs-server
  namespace: test-a
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/default-backend: "svc-nodejs-server"
spec:
  ingressClassName: nginx
  rules:
    - host: nodejs-server.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-nodejs-server
              port:
                number: 3000
